workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/CriticaOrcamento__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as analises de aceitação geradas pelo ODM ou pelo Sinapse</description>
    <label>Crítica do orçamento</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número da crítica</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Críticas do orçamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>