workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/Acao__c.field-meta.xml
<CustomField>
    <fullName>Acao__c</fullName>
    <label>Ação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>