workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/DataConclusao__c.field-meta.xml
<CustomField>
    <fullName>DataConclusao__c</fullName>
    <label>Data conclusão</label>
    <type>Date</type>
</CustomField>