workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>