workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Justificativa__c</fullName>
    <label>Justificativa</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>