workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/MensagemInterna__c.field-meta.xml
<CustomField>
    <fullName>MensagemInterna__c</fullName>
    <label>Mensagem interna</label>
    <type>TextArea</type>
</CustomField>