workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/MensagemRepresentante__c.field-meta.xml
<CustomField>
    <fullName>MensagemRepresentante__c</fullName>
    <label>Mensagem representante</label>
    <type>TextArea</type>
</CustomField>