workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/Orcamento__c.field-meta.xml
<CustomField>
    <fullName>Orcamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orçamento</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Críticas do orçamento</relationshipLabel>
    <relationshipName>CriticaOrcamentos</relationshipName>
    <type>Lookup</type>
</CustomField>