workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/Severidade__c.field-meta.xml
<CustomField>
    <fullName>Severidade__c</fullName>
    <label>Severidade</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>