workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Análise</fullName>
            </value>
            <value>
                <fullName>Aviso</fullName>
            </value>
            <value>
                <fullName>Pendência</fullName>
            </value>
            <value>
                <fullName>Recusa</fullName>
            </value>
            <value>
                <fullName>Risco</fullName>
            </value>
            <value>
                <fullName>Assinatura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>