workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/validationRules/ValidarPerfil.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPerfil</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    NOT(CONTAINS($Profile.Name, &apos;técnico&apos;)) &amp;&amp; NOT(ISPICKVAL(Status__c , &apos;Pendente&apos;)),
    Severidade__c = 2
)</errorConditionFormula>
    <errorMessage>Seu perfil não possui permissão para alterar esta crítica.</errorMessage>
</ValidationRule>