workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/validationRules/ValidarPreenchimentoJustificativa.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoJustificativa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT(ISPICKVAL(Status__c, &apos;Pendente&apos;)), 
   ISBLANK( Justificativa__c)
)</errorConditionFormula>
    <errorDisplayField>Justificativa__c</errorDisplayField>
    <errorMessage>Preencha a justificativa.</errorMessage>
</ValidationRule>