workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/validationRules/ValidarPreenchimentoStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT(ISBLANK( Justificativa__c)),
   ISPICKVAL(Status__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Preencha a o status.</errorMessage>
</ValidationRule>