workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/listViews/CriticasODM.listView-meta.xml
<ListView>
    <fullName>CriticasODM</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Procedimento__c</columns>
    <columns>DataConclusao__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origem__c</field>
        <operation>equals</operation>
        <value>ODM</value>
    </filters>
    <label>Críticas ODM</label>
</ListView>