workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/listViews/FilaCoordenadorOrcamento_CriticaOrcamento.listView-meta.xml
<ListView>
    <fullName>FilaCoordenadorOrcamento_CriticaOrcamento</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila Coordenador</label>
    <queue>FilaCoordenadorOrcamento</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>