workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/listViews/FilaMedicaOrcamento_CriticaOrcamento.listView-meta.xml
<ListView>
    <fullName>FilaMedicaOrcamento_CriticaOrcamento</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila Médica</label>
    <queue>FilaMedicaOrcamento</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>