workspace-sf/force-app/main/default/objects/CriticaOrcamento__c/listViews/FilaTecnicaOrcamento_CriticaOrcamento.listView-meta.xml
<ListView>
    <fullName>FilaTecnicaOrcamento_CriticaOrcamento</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila Técnica</label>
    <queue>FilaTecnicaOrcamento</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>